@@ -24,17 +24,24 @@ class CommentManager(models.Manager):
 
 class PostManager(models.Manager):
     def get_post(self):
-        return self.get_query_set().filter(type = self.model.POST_TYPE).order_by('-date')
+        return self.get_query_set().filter(
+                    type = self.model.POST_TYPE,
+                    status = self.model.PUBLISHED_STATUS).order_by('-date')
     
     def get_page(self):
-        return self.get_query_set().filter(type = self.model.PAGE_TYPE).order_by('-date')
+        return self.get_query_set().filter(
+                    type = self.model.PAGE_TYPE,
+                    status = self.model.PUBLISHED_STATUS)
         
     def get_post_by_category(self, cat):
-        return self.get_query_set().filter(type = self.model.POST_TYPE,
+        return self.get_query_set().filter(
+                type = self.model.POST_TYPE,
+                status = self.model.PUBLISHED_STATUS,
                 category = cat.id).order_by('-date')
         
     def get_post_by_date(self, year, month):
-        return self.get_query_set().filter(type = self.model.POST_TYPE,
+        return self.get_query_set().filter(
+                type = self.model.POST_TYPE,
+                status = self.model.PUBLISHED_STATUS,
                 date__year = int(year),
                 date__month = int(month)).order_by('-date')
-
