@@ -1,3 +1,4 @@
+{% load pagenavi %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
@@ -17,21 +18,5 @@
 		</div> 
 
 		<div id="menu">
-		       	<ul>
-			{% if current %}
-				<li class="page_item"><a href="/" title="Home">首页</a></li>
-			{% else %}
-				<li class="current_page_item"><a href="/" title="Home">首页</a></li>
-			{% endif %}
-
-			{% for menu_item in menu %}
-				{% ifequal  current menu_item.name %}
-					<li class="current_page_item"><a href="/{{ menu_item.name }}" title="Home">{{ menu_item.title }}</a></li>
-				{% else %}
-					<li class="page_item"><a href="/{{ menu_item.name }}" title="Home">{{ menu_item.title }}</a></li>
-				{% endifequal %}
-			{% endfor %}
-			</ul>
+			{% pagenavi %}
 		</div>
-
-		
