@@ -1,15 +1,0 @@
-<ul>
-{% if current %}
-	<li class="page_item"><a href="/" title="Home">首页</a></li>
-{% else %}
-	<li class="current_page_item"><a href="/" title="Home">首页</a></li>
-{% endif %}
-
-{% for menu_item in menu %}
-	{% ifequal current menu_item.name %}
-		<li class="current_page_item"><a href="/{{ menu_item.name }}" title="Home">{{ menu_item.title }}</a></li>
-	{% else %}
-		<li class="page_item"><a href="/{{ menu_item.name }}" title="Home">{{ menu_item.title }}</a></li>
-	{% endifequal %}
-{% endfor %}
-</ul>
