@@ -1,3 +1,7 @@
+2008-11-02 TualatriX <tualatrix@gmail.com>
+
+	* pulog/templatetags/menu.py: Fixed the filter for menu(static page).
+
 2008-10-30 TualatriX <tualatrix@gmail.com>
 	
 	* media/: Integrated media to pulog models.
